--- a/testwebsite/src/pages/logIn.css
+++ b/testwebsite/src/pages/logIn.css
@@ -6,20 +6,20 @@
   justify-content: center;
   height: 100vh;
   background-color: black;
-  color: white; /* 폼 내의 텍스트 색상을 흰색으로 설정 */
+  color: white; 
 }
 
 .inputWrapper {
   text-align: left;
-  width: 100%; /* 입력 폼의 너비를 전체로 설정 */
-  max-width: 200px; /* 최대 너비 설정 */
+  width: 100%; 
+  max-width: 200px; 
   display: flex;
   flex-direction: column;
 }
 
 .passwordLabel {
-  color: white; /* 라벨 텍스트 색상을 흰색으로 설정 */
-  margin-bottom: 5px; /* 입력 폼과의 간격 */
+  color: white; 
+  margin-bottom: 5px; 
 }
 
 .inputWrapper input[type="password"] {
@@ -28,11 +28,11 @@
 }
 
 .loginForm input, .loginForm button {
-  margin-top: 10px; /* 입력 필드와 버튼 사이의 마진 조정 */
+  margin-top: 10px; 
   padding: 10px;
   font-size: 16px;
-  width: 100%; /* 입력 필드와 버튼의 너비 */
-  height: 40px; /* 입력 필드와 버튼의 높이 */
+  width: 100%; 
+  height: 40px; 
 }
 
 .loginButton {
